Added the content for the website

--- a/caseStudy2.html
+++ b/caseStudy2.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Property Seller app</title>
+    <title>Dashboards</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -33,10 +33,8 @@
             <ul class="hamburgerMenuContainer">
                 <li><a class="hamburgerMenu" id="closeLinkOne" href="./index.html#workSection">WORK</a></li>
                 <li><a class="hamburgerMenu" id="closeLinkTwo" href="./index.html#skillSection">SKILLS</a></li>
-                <li><a class="hamburgerMenu" id="closeLinkThree" href="./index.html#experienceSection">EXPERIENCE</a>
-                </li>
-                <li><a class="hamburgerMenu" id="closeLinkFour" href="./index.html#GetInTouchSection">GET IN TOUCH</a>
-                </li>
+                <li><a class="hamburgerMenu" id="closeLinkThree" href="./index.html#experienceSection">EXPERIENCE</a></li>
+                <li><a class="hamburgerMenu" id="closeLinkFour" href="./index.html#GetInTouchSection">GET IN TOUCH</a></li>
             </ul>
         </div>
 
@@ -46,126 +44,71 @@
                     <img src="./Resources/back.svg">
                     <h6>Back</h6>
                 </button>
-                <img src="./Resources/CoverVendorApp.png">
+                <img src="./Resources/LeaderboardTile.png">
             </div>
         </div>
     </header>
     <article class="articleContain">
-        <h2>Property Sellers App</h2>
-        <p class ="readingTime">Reading time: 5 mins</p>
-        <aside>The Insight: Property sellers constantly have a bad experience during the sales process, even though it's the biggest financial transaction of their lifetime.</aside>
-        <br><br>
-        <h4>Overview</h4>
-        <p class="fullwidth bodyformat">
-            The Property sellers app was the first of its kind. It's an app for a seller, who is selling with an LJ Hooker agent, to keep track of everything that is happening during their property campaign. The product enabled sellers to be informed about who viewed their property, and what they thought about it, including critical information such as who put an offer through and how much buyers are willing to pay for their property.
-        </p>
-        <div class="spacer"></div>
-        <h4>Before my time..</h4>
-        <p class="fullwidth bodyformat">
-            We had a simple app as part of the LJhooker's legacy technology with minimal to no active users. Most of the agents that we spoke to had a set manual system in place for this particular use case.
-            <br>This is what we were competing with:<br>
-        <ol>
-            <li class="bodyformat">Agents curated elaborate Word documents weekly. They typically copy/pasted buyers' details and their reviews, and took printouts to client meetings.</li>
-            <li class="bodyformat">Many curated long emails or shared information on Whatsapp that often got lost in conversations.</li>
-            <li class="bodyformat">Sellers also expected daily calls or emails since they wanted to know what was happening every single day during a live campaign.</li>
-        </ol>
-        <p>We aimed to fix that.</p>
-        <div class="spacer"></div>
-        <h4>My role</h4>
-        <p class="fullwidth bodyformat">
-            In this project, my role was the design lead and product manager. Working with a small team of two, I had to wear multiple hats.
-    <br><br>
-    We were a team of two designers and an amazing engineering team that brought this vision to life.
-            <br><br>
-            As part of my role, I was responsible for talking to users, liaising with the business, researching, and defining the needs of both the primary and secondary users. Distilling our research down to specific painpoints, ideating solutions through to high-fidelity designs, defining what success looked like, and defining the product strategy moving forward.<br> <br>
-        </p>
-        <div class="spacer"></div>
+        <h2>LJ Hooker Dashboards</h2>
+        <p class ="readingTime">Reading time: 2 mins</p>
+        <div class="spacer"></div> 
         <h4>The brief</h4>
-        <p class="fullwidth bodyformat">
-            The business's goal was to recruit more agents into LJHooker's network. So the primary focus was to help LJ Hooker’s 5000+ agents as well as focus on attracting the next cohort of agents into the company.
-        </p>
-        <p class="fullwidth bodyformat">
-            We started by talking to agents to understand their pain points in their everyday business asking, “What do agents care about the most in their business?”.
-        </p>
-        <p class="fullwidth bodyformat">
-            What did we find? (ranked highest to lowest), They said:
-        </p>
-        <ol>
-            <li class="bodyformat">Help me convert more leads into active listings</li>
-            <li class="bodyformat">Help me win more leads(properties to sell)</li>
-            <li class="bodyformat">Help me manage my current clients efficiently</li>
-            <li class="bodyformat">Create a point of difference to help me convert more leads</li>
-        </ol>
-        <div class="spacer"></div>
-        <img src="./Resources/SurveyAgents.png" class="imageInArticle" alt="">
-        <div class="spacer"></div>
-        <h4>Strategic initiative</h4>
-        <p class="fullwidth bodyformat">
-            We decided to focus on #3 and #4.<br>By focussing on their clients, we wanted to help our Agents win.
-            Knowing the sellers have a tough experience and the agents are constantly juggling multiple clients and tasks at any given time, we recognized there is an unmet need.</p>
-        <div class="spacer"></div>
-        <h4>The Process</h4>
-        <p class="fullwidth bodyformat">
-            We started by speaking to past property sellers about what were the main causes of friction during their recent sales process and validating initial concepts.
-        </p>
-        <div class="spacer"></div>
-        <img src="./Resources/workShopVapp.jpg" class="imageInArticle" alt="">
-        <div class="spacer"></div>
-        <h4>The problem being solved</h4>
-        <ol>
-            <li class="bodyformat">Sellers felt left out during the campaign with limited visibility about what was happening daily.</li>
-            <li class="bodyformat">Sellers wanted more transparency about who is viewing their property and what they thought about it.</li>
-            <li class="bodyformat">They wanted to help learn about what to expect and when.</li>
-            <li class="bodyformat">Agent wanted help managing their clients expeditiously.</li>
-        </ol>
-        <div class="spacer"></div>
-        <h4>Main Jobs to be done</h4>
-        <ol>
-            <li class="bodyformat">Help me by being transparent about who is viewing my property and what they are saying.</li>
-            <li class="bodyformat">Help me be informed about everything that is happening during my sales campaign quickly.</li>
-            <li class="bodyformat">Help me learn about this complex process and keep me updated.</li>
-            <li class="bodyformat">Help me(agent) by simplifying the amount of work required to manage my current clients.</li>
-        </ol>
-        <div class="spacer"></div>
-        <img src="./Resources/wireframeVendor.png" class="imageInArticle" alt="">  
-        <div class="spacer"></div>
-        <h4>The Design Outcome</h4>
-        <p>The product went through a massive overhaul with more emphasis on the primary user. We developed this product as an app as well as a web application.</p>
-        <div class="spacer"></div>
-        <img src="./Resources/vendorOne.png" class="imageInArticle" alt="">  
-        <div class="spacer"></div>
-        <h4>1. Reporting</h4>
-        <p>To solve transparency and trust, we enabled the homescreen to inform the vendor at any given time who has viewed their property and their intent. We also integrated with external listing websites so the app was a one-stop shop for the sellers to know exactly how their online campaign is performing.</p>
-        <div class="spacer"></div>
-        <img src="./Resources/vendorTwo.png" class="imageInArticle" alt="">  
-        <div class="spacer"></div>
-        <h4>2. Transparency and automation</h4>
-        <p>To solve the problem of pricing transparency and trust, we informed the buyers in real-time who visited their property, what they thought about it, and how serious the buyers are. Our most successful feature(that I'm proud of) was a visualization of pricing transparency based on the information given by the buyers
-        </p>
-        <div class="spacer"></div>
-        <img src="./Resources/vendorThree.png" class="imageInArticle" alt="">  
-        <div class="spacer"></div>
-        <h4>3. Communication and access</h4>
-        <p>During the campaign, the sellers know exactly what is happening and when it is happening, whether it is marketing events, staging events, photoshoots, or open homes, all integrated with their calendar. As well as all the requisite documents stored on the app.
-        </p>
-        <div class="spacer"></div>
-        <img src="./Resources/vendorFour.png" class="imageInArticle" alt="">  
-        <div class="spacer"></div>
-        <h4>Validation:</h4>
-        <p>We tested out initial concepts with the past sellers to identify if there was any traction with our concept. We got a lot of initial feedback on the designs from our Agents and the business. We implemented Segment and Mixpanel to understand usage patterns</p>
-        <div class="spacer"></div>
-        <h4>Limitations</h4>
-        <ul>
-            <li class="bodyformat">We had a hard time getting agents to adopt the product as they were set in their ways, even though we noticed that the sellers really loved it.</li>
-            <li class="bodyformat">We were only able to integrate with a couple of CRMs. That limited the number of users we could target.</li>
-            <li class="bodyformat">I wish we could do a bit more user testing with real sellers but we were met with a lot of friction from the business.</li>
-        </ul>
-        <div class="spacer"></div>
-        <h4>Whats next?</h4>
-        <p>This was just a small snapshot of a long iterative cycle. We have some wild plans for this product and where we want to take it. keen to chat more about the process and what's next.
-        </p>
-        <div class="spacer"></div>
-    </article>
+        <p class="fullwidth">Every month, LJ Hooker corporate had couple of employees generate performance reports and ranking lists of the 5000s staff and 500 offices. This process was time consuming, costly and prone to many data related issues.
+            We were tasked to automate the existing process of generating the office & agent performance and ranking lists. <br><br>
+            I had an idea!<br><br>
+            
+            Instead of just automating it, I thought it would be better to provide a real-time dashboard and Leaderboard for all our offices and agents.</p>
+            <div class="spacer"></div> 
+            <h4>The Problem</h4>
+            <p class="fullwidth">Business pain-points</p>
+            <ol>
+                <li class="listItem">Expensive: Currently there were 1 1/2 employees employed for doing this job of generating, editing, and publishing weekly or monthly pdf reports about individual office performance and the ranking list</li>
+                <li class="listItem">Data Accuracy: The data was prone to errors and often edited and unreliable</li>
+            </ol>
+            <div class="spacer"></div> 
+            <p class="fullwidth">User Pain-points</p>
+            <ol>
+                <li class="listItem">Delay: Users had to wait a month to get access to their ranking list</li>
+                <li class="listItem">Lack of availability</li>
+                    <ul>
+                        <li class="subListItem">Business owners did not have an easy way to view the agent's performance in their office and how they compared with other agents.</li>
+                        <li class="subListItem">Agents did not have an easy way to view their performance as well as how they compare with their peers.</li>
+                    </ul>
+                <li class="listItem">Access: Current leaderboards were being shared as a ranked list on pdf once a month on the company intranet. The medium was not ideal.</li>
+            </ol>
+            <div class="spacer"></div> 
+
+            <h4>My role</h4>
+            <p class="fullwidth">We were in a team of two designers. I was the designer and the product manager. My role involved understanding the need of the business and the end user, understanding the problem, and defining what the MVP would look like, the success metrics, and where this product sits in our larger product strategy. Working collaboratively, we came up with the solution and tested it out with a small group of officers, to get early feedback.
+            </p>
+
+            <div class="spacer"></div> 
+            <h4>The Design Solution</h4>
+            <p class="fullwidth">We introduced an easy and interactive way for Agents/offices to visualize their sales performance for the financial year as well as introduced a Leaderboard to drive healthy competition among agents.
+            </p>
+            <img src="./Resources/LeaderOne.png" class="imageInArticle" alt="">
+            <img src="./Resources/LeaderTwo.png" class="imageInArticle" alt="">
+            <div class="spacer"></div> 
+            <h4>Agent & office performance section</h4>
+            <p class="fullwidth">Visualization of recent sales and commissions earned. This gives the agent/office a snapshot of their sales performance.</p>
+            <div class="spacer"></div> 
+            <h4>Leaderboard</h4>
+            <p class="fullwidth">This gives the agent and the office a relative comparison of how their performing vs the peers based on certain defined metrics like most sales, highest commission earned, the most number of properties listed, etc</p>
+            <div class="spacer"></div> 
+            <h4>Validation</h4>
+            <p class="fullwidth">We tested several early designs with select few agents to get early feedback. After the MVP launched, we started getting a lot of positive feedback and a lot of feature requests right from day 1 which was a great sign.</p>
+            <img src="./Resources/Validations.png" class="imageInArticle" alt="">
+            <div class="spacer"></div> 
+            <h4>Whats next?</h4>
+            <p>Our roadmap for this product was as follows.</p>
+            <ol>
+                <li class="listItem">To increase the number of roles and permissions for who can see what data(most requested feature)</li>
+                <li class="listItem">An ability to view their awards and accomplishments in addition to their ranking in the leaderboards(requested feature)</li>
+                <li class="listItem">An ability to create their custom business plan for the FY and track their performance thought the year vs their business plan.</li>
+                <li class="listItem">The ability to have an overview of the take-home earnings after deductions and to help them visualize their personal finances.</li>
+            </ol>
+            <div class="spacer"></div> 
+        </article>
 
     <footer>
         <!-- Get In touch section in Main page-->
