--- a/index.html
+++ b/index.html
@@ -57,9 +57,7 @@
                         </div>
                     </div>
                     <div class="coverAnimation">
-                        <h5 class="subTitleCover">Funny and descriptive. It is a long established fact that a reader
-                            will be distracted by the readable content at its layout. Funny and descriptive. It is a long established fact that a reader
-                            will be distracted by</h5>
+                        <h5 class="subTitleCover">Hey, I'm a product designer from Sydney. I turn thorny problems into pleasurable experiences with my creative chops. I'm looking for a new team to build the future we desire.</h5>
                     </div>
                 </div>
                 <ul class="mainNavSection">
@@ -77,14 +75,9 @@
         <section id="missionSection">
             <div class="sectionTitle" id="wrap">
                 <h1 class="missionTitleAnimation ">About</h1>
-                <h5 class="missionTitleBody ">Lorem ipsum dolor sit amet consectetur
-                    adipisicing elit. Sunt saepe
-                    perspiciatis mollitia ipsum
-                    impedit, pariatur, aperiam dolorum architecto assumenda voluptas nobis. Perspiciatis et hic maiores
-                    beatae, quod animi facere mollitia quos possimus. Quidem inventore suscipit, eos adipisci saepe
-                    atque nobis quo laboriosam eaque ducimus tempora doloribus neque dignissimos temporibus
-                    ipsam?<br><br>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Tempora, vel illum quod
-                    facere recusandae reiciendis quasi accusantium distinctio odit ipsum.</h5>
+                <h5 class="missionTitleBody ">I am Hansel Pinto. I currently work as a senior product designer at LJ Hooker. Being a part of a small team, I often wear multiple hats and work across a wide portfolio of products.<br><br>I am a passionate problem-solver, a team player, and a lifelong learner who always questions the <strong class="emphasis">"what is" </strong>and is intrigued about the <strong class="emphasis"> "what could"</strong>. <br><br>I love working with mission-driven teams and vision-driven companies. I aim to to bring value and learn from the best in the industry. <br><br> Let's chat over a coffee, I love coffee!
+
+                    </h5>
                 <img class="imageMe" src="./Resources/photoMe.png">
                 <img class="coneSvg" src="./Resources/ConeSvg.svg">
                 <img class="plusSvg" src="./Resources/plusSvg.svg">
@@ -102,7 +95,7 @@
                 <div class="workSectionTitle">
                     <div class="workSectionTitleSticky">
                         <h1>Work</h1>
-                        <h6>Lorem ipsum, dolor sit amet consectetur adipisicing elit.</h6>
+                        <!-- <h6>This is some of my recent work in the last one year</h6> -->
                     </div>
                     <img class="circleWorkSvg" src="./Resources/circleSvg.svg" alt="">
                     <img class="rotateSvg" src="./Resources/rotateSvg.svg" alt="">
@@ -113,17 +106,16 @@
                             <!--Insert page url-->
                             <div class="workTileflex">
                                 <div class="frame">
-                                    <img class="workTitleImage" src="./Resources/sampleImg.png">
+                                    <img class="workTitleImage" src="./Resources/VendorAppTile.png">
                                 </div>
                                 <div class="workTilesFlexInfo">
                                     <div class="workTilesTopWrapper">
-                                        <h4 class="workTitle">Property sellers app 0</h4>
-                                        <h6 class="workSubtitle">Lorem ipsum dolor sit amet consectetur adipisicing
-                                            elit.</h6>
+                                        <h4 class="workTitle">Property Sellers App</h4>
+                                        <h6 class="workSubtitle">The property seller app was the first of its kind. Its an app for a seller, who is selling with an LJ Hooker agent, to keep track of everything that is happenin..</h6>
                                     </div>
 
                                     <div class="workTilesBottomWrapper">
-                                        <div class="divider"></div>
+                                        <div class="dividerWork"></div>
                                         <div class="tags">
                                             <div class="tag">UX design</div>
                                             <div class="tag">Product management</div>
@@ -135,25 +127,24 @@
                         </a>
                     </div>
                     <div class="workTiles workParallax" data-speed=".5">
-                        <a href="./caseStudy1.html">
+                        <a href="./caseStudy2.html">
                             <!--Insert page url-->
                             <div class="workTileflex">
                                 <div class="frame">
-                                    <img class="workTitleImage" src="./Resources/sampleImg.png">
+                                    <img class="workTitleImage" src="./Resources/LeaderboardTile.png">
                                 </div>
                                 <div class="workTilesFlexInfo">
                                     <div class="workTilesTopWrapper">
-                                        <h4 class="workTitle">Property sellers app 0</h4>
-                                        <h6 class="workSubtitle">Lorem ipsum dolor sit amet consectetur adipisicing
-                                            elit.</h6>
+                                        <h4 class="workTitle">LJ Hooker Dashboard</h4>
+                                        <h6 class="workSubtitle">A network wide perfromance dashboard and leaderboard.</h6>
                                     </div>
 
                                     <div class="workTilesBottomWrapper">
-                                        <div class="divider"></div>
+                                        <div class="dividerWork"></div>
                                         <div class="tags">
                                             <div class="tag">UX design</div>
+                                            <div class="tag">UI design</div>
                                             <div class="tag">Product management</div>
-                                            <div class="tag">UX design</div>
                                         </div>
                                     </div>
                                 </div>
@@ -161,51 +152,73 @@
                         </a>
                     </div>
                     <div class="workTiles workParallax" data-speed=".5">
-                        <a href="./caseStudy1.html">
+                        <a href="./caseStudy3.html">
                             <!--Insert page url-->
                             <div class="workTileflex">
                                 <div class="frame">
-                                    <img class="workTitleImage" src="./Resources/sampleImg.png">
+                                    <img class="workTitleImage" src="./Resources/metricsCover.png">
                                 </div>
                                 <div class="workTilesFlexInfo">
                                     <div class="workTilesTopWrapper">
-                                        <h4 class="workTitle">Property sellers app 0</h4>
-                                        <h6 class="workSubtitle">Lorem ipsum dolor sit amet consectetur adipisicing
-                                            elit.</h6>
+                                        <h4 class="workTitle">Product framework</h4>
+                                        <h6 class="workSubtitle">Defining, creating, and implementing a product framework to meausure the success or failure of all LJ Hooker products.</h6>
                                     </div>
 
                                     <div class="workTilesBottomWrapper">
-                                        <div class="divider"></div>
+                                        <div class="dividerWork"></div>
                                         <div class="tags">
-                                            <div class="tag">UX design</div>
                                             <div class="tag">Product management</div>
-                                            <div class="tag">UX design</div>
+                                            <div class="tag">Product strategy</div>
                                         </div>
                                     </div>
                                 </div>
                             </div>
                         </a>
                     </div>
+     
                     <div class="workTiles workParallax" data-speed=".5">
-                        <a href="./caseStudy1.html">
+                        <a href="./caseStudy4.html">
                             <!--Insert page url-->
                             <div class="workTileflex">
                                 <div class="frame">
-                                    <img class="workTitleImage" src="./Resources/sampleImg.png">
+                                    <img class="workTitleImage" src="./Resources/TraderWormTile.png">
                                 </div>
                                 <div class="workTilesFlexInfo">
                                     <div class="workTilesTopWrapper">
-                                        <h4 class="workTitle">Property sellers app 0</h4>
-                                        <h6 class="workSubtitle">Lorem ipsum dolor sit amet consectetur adipisicing
-                                            elit.</h6>
+                                        <h4 class="workTitle">Crypto social app</h4>
+                                        <h6 class="workSubtitle">Traderworm aims to be a crypto social platform for traders, primarily to sell their trading services.</h6>
                                     </div>
 
                                     <div class="workTilesBottomWrapper">
-                                        <div class="divider"></div>
+                                        <div class="dividerWork"></div>
                                         <div class="tags">
-                                            <div class="tag">UX design</div>
-                                            <div class="tag">Product management</div>
-                                            <div class="tag">UX design</div>
+                                            <div class="tag">UI design</div>
+                                            <div class="tag">Visual design</div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </a>
+                    </div>
+
+                    <div class="workTiles workParallax" data-speed=".5">
+                        <a href="./caseStudy5.html">
+                            <!--Insert page url-->
+                            <div class="workTileflex">
+                                <div class="frame">
+                                    <img class="workTitleImage" src="./Resources/coverGTG.png">
+                                </div>
+                                <div class="workTilesFlexInfo">
+                                    <div class="workTilesTopWrapper">
+                                        <h4 class="workTitle">Miscellaneous projects</h4>
+                                        <h6 class="workSubtitle">Some of my recent freelance work and personal projects</h6>
+                                    </div>
+
+                                    <div class="workTilesBottomWrapper">
+                                        <div class="dividerWork"></div>
+                                        <div class="tags">
+                                            <div class="tag">Brand Identity</div>
+                                            <div class="tag">Animation</div>
                                         </div>
                                     </div>
                                 </div>
@@ -232,29 +245,29 @@
                         <h3 class="skillsSectionTitle">Discover</h3>
                         <div class="skillNamesContainer">
                             <h5 class="skillNames">Research</h5>
-                            <h5 class="skillNames">Metrics</h5>
-                            <h5 class="skillNames">Research</h5>
-                            <h5 class="skillNames">Metrics</h5>
+                            <h5 class="skillNames">Product strategy</h5>
+                            <h5 class="skillNames">Data analysis</h5>
+                            <h5 class="skillNames">User testing</h5>
                         </div>
                     </div>
 
                     <div id="designSkills" class="skillColumn">
                         <h3 class="skillsSectionTitle">Design</h3>
                         <div class="skillNamesContainer">
-                            <h5 class="skillNames">Research</h5>
-                            <h5 class="skillNames">Metrics</h5>
-                            <h5 class="skillNames">Research</h5>
-                            <h5 class="skillNames">Metrics</h5>
+                            <h5 class="skillNames">UX design</h5>
+                            <h5 class="skillNames">Visual design</h5>
+                            <h5 class="skillNames">Illustration</h5>
+                            <h5 class="skillNames">Branding</h5>
                         </div>
                     </div>
 
                     <div id="deploySkills" class="skillColumn">
                         <h3 class="skillsSectionTitle">Deploy</h3>
                         <div class="skillNamesContainer">
-                            <h5 class="skillNames">Research</h5>
-                            <h5 class="skillNames">Metrics</h5>
-                            <h5 class="skillNames">Research</h5>
-                            <h5 class="skillNames">Metrics</h5>
+                            <h5 class="skillNames">Rapid prototyping</h5>
+                            <h5 class="skillNames">Web development</h5>
+                            <h5 class="skillNames">Animation</h5>
+                            
                         </div>
                     </div>
                 </div>
@@ -283,35 +296,23 @@
                             <h6 class="companyName">LJ Hooker Corporation</h6>
                             <h6 class="companyDates">09/19 - today</h6>
                         </div>
-                        <h6>Industry's standard dummy text ever since the 1500s, when an unknown printer took a galley
-                            of
-                            type and scrambled it to make a type specimen book. It has survived not only five centuries,
-                            but
-                            also the leap into electronic types</h6>
+                        <h6>My role involved wearing multiple hats and working on products used by LJ Hooker offices and their clients. Defining the product strategy, research, UX design, visual design, metrics as well as working closely with offshore development teams.</h6>
                     </div>
                     <div class="experienceContainer two">
-                        <h4 class="jobTitle">Senior Product Designer</h4>
+                        <h4 class="jobTitle">UX consultant</h4> 
                         <div class="companyAndDates">
-                            <h6 class="companyName">LJ Hooker Corporation</h6>
-                            <h6 class="companyDates">09/19 - today</h6>
+                            <h6 class="companyName">Sitback Solutions</h6>
+                            <h6 class="companyDates">12/18 - 02/2019</h6>
                         </div>
-                        <h6>Industry's standard dummy text ever since the 1500s, when an unknown printer took a galley
-                            of
-                            type and scrambled it to make a type specimen book. It has survived not only five centuries,
-                            but
-                            also the leap into electronic types</h6>
+                        <h6>I worked with Sitback to design products for clients:Skynews and Newscorp</h6>
                     </div>
                     <div class="experienceContainer three">
-                        <h4 class="jobTitle">Senior Product Designer</h4>
+                        <h4 class="jobTitle">Mechanical Design Engineer</h4>
                         <div class="companyAndDates">
-                            <h6 class="companyName">LJ Hooker Corporation</h6>
-                            <h6 class="companyDates">09/19 - today</h5>
+                            <h6 class="companyName">L&T Technology Services</h6>
+                            <h6 class="companyDates">10/13 - 08/2016</h5>
                         </div>
-                        <h6>Industry's standard dummy text ever since the 1500s, when an unknown printer took a galley
-                            of
-                            type and scrambled it to make a type specimen book. It has survived not only five centuries,
-                            but
-                            also the leap into electronic types</h6>
+                        <h6>I worked as design engineer, designing 3D CAD models and automotive components for Mercedes benz automotive.</h6>
                     </div>
                 </div>
                 <img class="circleExp" src="./Resources/circleSvg.svg" alt="">
