article image and cover changes

--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="format-detection" content="telephone=no">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
@@ -202,11 +203,11 @@
                     </div>
 
                     <div class="workTiles workParallax" data-speed=".5">
-                        <a href="./caseStudy5.html">
+                        <a href="./caseStudy5.html">    
                             <!--Insert page url-->
                             <div class="workTileflex">
                                 <div class="frame">
-                                    <img class="workTitleImage" src="./Resources/coverGTG.png">
+                                    <img class="workTitleImage" src="./Resources/nstepTile.png">
                                 </div>
                                 <div class="workTilesFlexInfo">
                                     <div class="workTilesTopWrapper">
@@ -294,7 +295,7 @@
                         <h4 class="jobTitle">Senior Product Designer</h4>
                         <div class="companyAndDates">
                             <h6 class="companyName">LJ Hooker Corporation</h6>
-                            <h6 class="companyDates">09/19 - today</h6>
+                            <h6 class="companyDates">09 / 19 - today</h6>
                         </div>
                         <h6>My role involved wearing multiple hats and working on products used by LJ Hooker offices and their clients. Defining the product strategy, research, UX design, visual design, metrics as well as working closely with offshore development teams.</h6>
                     </div>
