--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
         <section id="missionSection">
             <div class="sectionTitle" id="wrap">
                 <h1 class="missionTitleAnimation ">About</h1>
-                <h5 class="missionTitleBody ">I am Hansel Pinto. I currently work as a senior product designer at LJ Hooker. Being a part of a small team, I often wear multiple hats and work across a wide portfolio of products.<br><br>I am a passionate problem-solver, a team player, and a lifelong learner who always questions the <strong class="emphasis">"what is" </strong>and is intrigued about the <strong class="emphasis"> "what could"</strong>. <br><br>I love working with mission-driven teams and vision-driven companies. I aim to to bring value and learn from the best in the industry. <br><br> Let's chat over a coffee, I love coffee!
+                <h5 class="missionTitleBody ">I am Hansel Pinto. I currently work as a senior product designer at LJ Hooker. Being a part of a small team, I often wear multiple hats and work across a wide portfolio of products.<br><br>I am a passionate problem-solver, a team player, and a lifelong learner who always questions the <strong class="emphasis">"what is" </strong>and is intrigued about the <strong class="emphasis"> "what could"</strong>. <br><br>I love working with mission-driven teams and vision-driven companies. I aim to bring value and learn from the best in the industry. <br><br> Let's chat over a coffee, I love coffee!
 
                     </h5>
                 <img class="imageMe" src="./Resources/photoMe.png">
